--- a/Numix/gnome-shell/gnome-shell.css
+++ b/Numix/gnome-shell/gnome-shell.css
@@ -152,19 +152,6 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active,
   padding: 13px;
 }
 
-.app-view-control {
-  background-color: #2d2d2d;
-  border: none;
-  box-shadow: none;
-}
-
-.page-indicator-icon {
-  background-image: none;
-  border-radius: 20px;
-  border: none;
-  background-color: #2d2d2d;
-}
-
 .modal-dialog-linked-button {
   background-color: #444444;
   border: 2px solid #444444;
@@ -197,6 +184,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active,
   background-image: url("calendar-today.svg");
 }
 
+.page-indicator-icon,
+.app-view-control,
 .modal-dialog,
 .osd-window,
 .resize-popup,
@@ -207,8 +196,14 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active,
 .workspace-thumbnails,
 .popup-menu .popup-menu-content,
 #dash {
+  background-image: none;
   background-color: #2d2d2d;
-  border: 2px solid #444444;
+  border: none;
+  box-shadow: none;
+}
+
+.page-indicator-icon {
+  border-radius: 20px;
 }
 
 .switcher-list {
