Fixed calendar actual day background color

--- a/Numix/gnome-shell/gnome-shell.css
+++ b/Numix/gnome-shell/gnome-shell.css
@@ -234,3 +234,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active,
 .popup-menu.panel-menu {
   -boxpointer-gap: 0px;
 }
+
+/* Actual day */
+.calendar-today {
+  background-color: #d64937; 
+}
